--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 		var script_path = location.search.slice(1)
 		if (script_path) {
 			console.log('Ready to debug: ', script_path)
-			var script = document.createElement('script')
-			script.src = script_path
-			document.body.appendChild(script)
+			require('./debug')
 		}
 		
 		</script>
