--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		</div>
 
 		<script>
-		
-		var script_path = location.search.slice(1)
-		if (script_path) {
-			console.log('Ready to debug: ', script_path)
-			require('./debug')
+
+		var src = location.search.slice(1)
+		if (src) {
+			src = require('path').resolve(src)
+			require(src)
 		}
 		
 		</script>
