Sets a breakpoint at the beginning of script being debugged

--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
 		</div>
 		<script>
 
-			var script_path = location.search.slice(1)
-			require(script_path)
+		var src = location.search.slice(1)
+		if (src) {
+			src = require('path').resolve(src)
+			var Module = window.require('module')
+			var wrap = Module.wrap
+			Module.wrap = function(content) {
+				Module.wrap = wrap
+				content = "\ndebugger;\n" + content
+				return Module.wrap(content)
+			}
+			require(src)
+		}
 
 		</script>
 	</body>
